2006-12-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : (InsertBefore) when newChild == refChild, do nothing
	  except for node type check. Fixed bug #80331.

2006-12-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Fixed ReadChars() to consume child elements,
	  including such cases that it breaks tags in the middle of multiple
	  ReadChars() calls. Fixed bug #80308.

2006-12-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : ReadChars() does not have to store characters,
	  so avoid extra storing. Patch by Csaba Halasz, fixed bug #80306.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : InnerText was returning comment text when there was
	  only a Comment node. Fixed bug #80233.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : Create() with string url was not returning validating
	  XmlReader.

2006-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* DTDValidatingReader2.cs : when an attribute declaration is missing
	  in the corresponding attlist declaration, it caused NRE.
	  Fixed bug #80231.

2006-12-11  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : call overriden CreateAttribute() when loading from
	  XmlReader.

2006-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : new 2.0 MoveToAttribute(int) failed to move to the
	  final attribute in an element.

2006-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : GetPrefixOfNamespace() was not correctly searching
	  ancestors' namespaces.

2006-11-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : fixed some relationship between
	  ConformanceLevel, OmitXmlDeclaration and WriteStartDocument().
	  See new tests more details.
	* XmlWriter.cs : it could reuse XmlTextWriter.ctor(TextWriter,
	  XmlWriterSettings). It also resulted in dropping several internal
	  members in XmlTextWriter.

2006-11-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderSettings.cs : in copy constructor, copy (dispatch)