@@ -1,3 +1,7 @@
+2007-02-07  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XmlReaderCommonTests.cs : added ReadElementContentAsStringEmpty().
+
 2006-12-20  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlNodeTests.cs : added tests for bug #80331.
